# AppSafe

./: README.md  a.txt  aa.txt  ac.txt  b.txt  bb.txt  build.gradle  keystore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jafir/appsafe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jafir/appsafe/: Main.java  MainActivity.kt
app/src/main/jni/: encrypt.cpp  encrypt.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jafir/appsafe/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jnilibrary/: CMakeLists.txt  build.gradle
jnilibrary/src/androidTest/java/com/jafir/jnilibrary/: ExampleInstrumentedTest.java
jnilibrary/src/main/: AndroidManifest.xml
jnilibrary/src/main/java/com/jafir/jnilibrary/: Hello.java  Packages.txt  Person.java  Person1.txt
jnilibrary/src/main/jni/: encrypt.c
jnilibrary/src/test/java/com/jafir/jnilibrary/: ExampleUnitTest.java
jnitest/: build.gradle
jnitest/libs/: jnilibrary-debug.aar
jnitest/src/main/: AndroidManifest.xml
jnitest/src/main/java/: Hello.dex
jnitest/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_splash1.xml
jnitest/src/main/res/values/: strings.xml
signprotect/: build.gradle
signprotect/debug/: output.json  signprotect-debug.apk
signprotect/src/main/: AndroidManifest.xml
signprotect/src/main/jni/: encrypt.c
signprotect/src/main/res/layout/: activity_main.xml  shared.xml
signprotect/src/main/res/values/: strings.xml
(+15 files in other folders)
